test/resources/parser/failing/ExtLambdaError2.scala
object LambdaError {
  val f: Int => Int = (\(x: Int): Int ->);
  Std.printInt(f(1))
}
